--- a/masterpage_html.css
+++ b/masterpage_html.css
@@ -6,17 +6,6 @@ a:hover { color:#0A5AA3; }
 		a.wsp113dc287:visited{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:active{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:hover{ color:#6C8AAA; text-decoration: none} 
-#menu_8980bcc a { text-decoration: none; }
-#menu_8980bcc_pane { background-color: #3A5068; border: 1px solid #3A5068; padding-top: 10px; padding-bottom: 10px; box-shadow: 2px 2px 6px 0px rgba(8, 8, 8, 0.784314); }
-#menu_8980bcc_hr { background-color: #3A5068; height: 1px; border: none; }
-#menu_8980bcc_entry { padding-left: 10px; padding-right: 10px; padding-top: 3px; padding-bottom: 3px; }
-#menu_8980bcc_entry:hover { background-color: #323232; color: #FFFFFF !important; }
-#menu_8980bcc_entry:hover span { color:#FFFFFF !important; }
-		.menu_8980bcc_mainMenuEntry { text-align: center; }
-		.menu_8980bcc_mainMenuEntry:hover {	background-color:#0067B8; }
-		.menu_8980bcc_mainMenuEntry:hover span {	color:#FFFFFF !important; }
-		#menu_8980bcc .mobileEntry { display: none; } 
-		#menu_8980bcc .normalEntry { display: block; } 
 #menu_3f2be38f a { text-decoration: none; }
 #menu_3f2be38f_pane { background-color: #E6E6E6; border: 1px solid #E6E6E6; padding-top: 10px; padding-bottom: 10px; box-shadow: 2px 2px 6px 0px rgba(8, 8, 8, 0.784314); }
 #menu_3f2be38f_hr { background-color: #E6E6E6; height: 1px; border: none; }
@@ -36,36 +25,27 @@ body { background-color:#F1F1F1; padding:0;  margin: 0; }
 .textstyle1 { text-align:center; }
 #container_eaea99e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
 #container_eaea99e_padding { margin: 10px; display: block;  }
-#container_d695c69 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#9C9C9C;  }
-.textstyle2 { text-align:left; }
-#menu_8980bcc { vertical-align: bottom; position:relative; display: inline-block; width:71px; height:34px; max-width:800px; text-align:left; background:none;  }
-.menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
-.menustyle1 { position:absolute; width:49px; height:34px; left:10px;  }
-.menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:68px;  }
-.textstyle3 { font-size:36pt; font-family:'Arial Black', Gadget, sans-serif; color:#000000;  white-space: nowrap; }
-.textstyle4 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:368px; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
+#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
 #container_6a5612c4_padding { margin: 10px; display: block;  }
-.textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
-.textstyle6 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
+.textstyle2 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
+.textstyle3 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
+.textstyle4 { text-align:left; }
 #container_22e4a421 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:759px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_22e4a421_padding { margin: 10px; display: block;  }
 #menu_3f2be38f { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #A0A0A0;  }
-.menustyle2 { position:absolute; width:37px; height:38px; left:10px;  }
-.menuentry_text2 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
-.textstyle7 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-.menustyle3 { position:absolute; width:109px; height:38px; left:10px;  }
-.menuentry_text3 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px;  }
-.textstyle8 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
-.menustyle4 { position:absolute; width:147px; height:38px; left:119px;  }
-.menustyle5 { position:absolute; width:145px; height:38px; left:266px;  }
-.menustyle6 { position:absolute; width:102px; height:38px; left:411px;  }
-.textstyle9 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+.menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
+.menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
+.menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
+.textstyle5 { font-size:22pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
+.menustyle2 { position:absolute; width:109px; height:38px; left:10px;  }
+.menuentry_text2 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px;  }
+.textstyle6 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap; }
+.menustyle3 { position:absolute; width:147px; height:38px; left:119px;  }
+.menustyle4 { position:absolute; width:145px; height:38px; left:266px;  }
+.menustyle5 { position:absolute; width:102px; height:38px; left:411px;  }
+.textstyle7 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
+.textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 #placeh_7a5ef65 { vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:557px;  }
-.textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle11 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle12 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-@media only screen and (max-width: 600px)
-{
-		#menu_8980bcc { width:50px;  }
-}
+.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+.textstyle10 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+.textstyle11 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
