--- a/contact_html.css
+++ b/contact_html.css
@@ -25,14 +25,14 @@ body { background-color:#F1F1F1; padding:0;  margin: 0; }
 .textstyle1 { text-align:center; }
 #container_eaea99e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
 #container_eaea99e_padding { margin: 10px; display: block;  }
-#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
+#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:92%; min-height:67px; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
 #container_6a5612c4_padding { margin: 10px; display: block;  }
 .textstyle2 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle3 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle4 { text-align:left; }
 #container_22e4a421 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:759px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_22e4a421_padding { margin: 10px; display: block;  }
-#menu_3f2be38f { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #A0A0A0;  }
+#menu_3f2be38f { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -45,22 +45,17 @@ body { background-color:#F1F1F1; padding:0;  margin: 0; }
 .menustyle5 { position:absolute; width:102px; height:38px; left:411px;  }
 .textstyle7 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
 .textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+#container_78d6203e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
+#container_78d6203e_padding { margin: 10px; display: block;  }
 #placeh_7a5ef65 { vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:557px;  }
 #container_61f95e0c { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
 #container_61f95e0c_padding { margin: 10px; display: block;  }
 #container_7af0d770 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:844px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_7af0d770_padding { margin: 10px; display: block;  }
-#container_21012002 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
-#container_21012002_padding { margin: 5px; display: block;  }
-#container_6c8a3dbe { vertical-align: top; position:relative; display: inline-block; width:54%; min-height:395px; background:none;  }
-#container_6c8a3dbe_padding { margin: 10px; display: block;  }
-#img_6d7f694e { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
-#img_3cacacad { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
-#img_19927b9e { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+#container_21012002 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#img_33793bb5 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+#img_3a41f573 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+#img_518a40e6 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
 .textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
 .textstyle10 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
 .textstyle11 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-@media only screen and (max-width: 800px)
-{
-		#container_6c8a3dbe { width:100%;  }
-}
