--- a/services_html.css
+++ b/services_html.css
@@ -2,6 +2,7 @@ a { color:#5D5D9E; }
 a:visited { color:#5D5D9E; } 
 a:active { color:#5C615E; } 
 a:hover { color:#0A5AA3; } 
+html, body { min-height: 100% } 
 		a.wsp113dc287{ color:#386BA3; text-decoration: none} 
 		a.wsp113dc287:visited{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:active{ color:#0000A0; text-decoration: none} 
@@ -25,14 +26,14 @@ body { background-color:#F1F1F1; padding:0;  margin: 0; }
 .textstyle1 { text-align:center; }
 #container_eaea99e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
 #container_eaea99e_padding { margin: 10px; display: block;  }
-#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
+#container_6a5612c4 { vertical-align: top; position:relative; display: inline-block; width:92%; min-height:67px; background-color:#FFFFFF; background-image: url(rc_images/semofleetlogo_1200x456.jpg); background-position:bottom left; background-size:cover;  }
 #container_6a5612c4_padding { margin: 10px; display: block;  }
 .textstyle2 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle3 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle4 { text-align:left; }
 #container_22e4a421 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:759px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_22e4a421_padding { margin: 10px; display: block;  }
-#menu_3f2be38f { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #A0A0A0;  }
+#menu_3f2be38f { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -45,24 +46,16 @@ body { background-color:#F1F1F1; padding:0;  margin: 0; }
 .menustyle5 { position:absolute; width:102px; height:38px; left:411px;  }
 .textstyle7 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
 .textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+#container_78d6203e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
+#container_78d6203e_padding { margin: 10px; display: block;  }
 #placeh_7a5ef65 { vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:557px;  }
 #container_7330b34f { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
 #container_7330b34f_padding { margin: 10px; display: block;  }
-#container_59a0caff { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:844px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_59a0caff { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 #container_59a0caff_padding { margin: 10px; display: block;  }
-.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; font-weight:bold; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-#container_5271cb71 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
-#container_5271cb71_padding { margin: 5px; display: block;  }
-#container_50693a0d { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:459px; background:none;  }
-#container_50693a0d_padding { margin: 10px; display: block;  }
-.textstyle10 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; line-height: 1.2;  }
-.textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
+.textstyle9 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; line-height: 1.2;  }
+.textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
 .ulstyle1 { margin:0; font-size: 12pt; color:#FFFFFF;  }
-.textstyle12 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-.textstyle13 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle14 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle15 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-@media only screen and (max-width: 800px)
-{
-		#container_50693a0d { width:100%;  }
-}
+.textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+.textstyle12 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+.textstyle13 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
