--- a/untitledpage_html.css
+++ b/untitledpage_html.css
@@ -2,7 +2,6 @@ a { color:#5D5D9E; }
 a:visited { color:#5D5D9E; } 
 a:active { color:#5C615E; } 
 a:hover { color:#B2B3B4; } 
-html, body { min-height: 100% } 
 		a.wsp113dc287{ color:#386BA3; text-decoration: none} 
 		a.wsp113dc287:visited{ color:#0000A0; text-decoration: none} 
 		a.wsp113dc287:active{ color:#0000A0; text-decoration: none} 
@@ -22,11 +21,11 @@ html, body { min-height: 100% }
 			#menu_12dc9f48 .mobileEntry { display: block; } 
 			#menu_12dc9f48 .normalEntry { display: none; } 
 		}
-body { background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65); background-repeat: no-repeat; padding:0;  margin: 0; }
+body { background-color:#FFFFFF; padding:0;  margin: 0; }
 .textstyle1 { text-align:left; }
-#img_3c70b732 { vertical-align: top; border-radius: 15px; position:relative; display: inline-block; width:57%; background:none; height:auto;  }
+#img_3c70b732 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none; height:auto;  }
 .textstyle2 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
-#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:57%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #FFFFFF;  }
+#menu_12dc9f48 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; height:38px; text-align:left; background-color:#000115; background: linear-gradient(to right, #0E3B65, #000115); border: 1px solid #FFFFFF;  }
 .menuholder1 { position: relative; overflow: hidden; width: 100%; height: 100%; }
 .menustyle1 { position:absolute; width:37px; height:38px; left:10px;  }
 .menuentry_text1 { position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:33px;  }
@@ -38,4 +37,4 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .menustyle4 { position:absolute; width:145px; height:38px; left:266px;  }
 .menustyle5 { position:absolute; width:97px; height:38px; left:411px;  }
 .textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
-#placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:57%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
+#placeh_91ac625 { box-sizing: border-box; vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:303px; border: 1px solid #A0A0A0;  }
