--- a/contact_html.css
+++ b/contact_html.css
@@ -40,16 +40,17 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
 #placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:57%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
 .textstyle6 { text-align:center; }
-#container_61f95e0c { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
-#container_61f95e0c_padding { margin: 10px; display: block;  }
-#container_7af0d770 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:844px; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
-#container_7af0d770_padding { margin: 10px; display: block;  }
-#container_21012002 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
-.textstyle7 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
-#img_33793bb5 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
-#img_3a41f573 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
-#img_518a40e6 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
-.textstyle8 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
-.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle10 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-.textstyle11 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
+#container_14de6854 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
+#container_14de6854_padding { margin: 10px; display: block;  }
+#container_28787caa { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_28787caa_padding { margin: 10px; display: block;  }
+.textstyle7 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold;  }
+.textstyle8 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-weight:bold;  }
+.textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
+#img_431272da { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+#img_1227c0aa { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+#img_73bda0f4 { vertical-align: bottom; position:relative; display: inline-block; width:5%; background:none; height:auto;  }
+.textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
+.textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
+#img_2cec44a1 { position:absolute; left:83%; top:4%; width:14%; background:none; height:auto;  }
+.textstyle12 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
