--- a/whoweare_html.css
+++ b/whoweare_html.css
@@ -40,20 +40,22 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .textstyle5 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  white-space: nowrap; }
 #placeh_91ac625 { vertical-align: top; position:relative; display: inline-block; width:57%; min-height:50px; background-color:#0E3B65; background: linear-gradient(to bottom, #000115, #0E3B65);  }
 .textstyle6 { text-align:center; }
-#container_892ebb7 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
-#container_fb7d91b { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
+#container_376d41f7 { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:1024px; background:none;  }
+#container_376d41f7_padding { margin: 10px; display: block;  }
+#container_431c43a0 { vertical-align: top; position:relative; display: inline-block; width:100%; background-color:#0E3B65; background: linear-gradient(to right, #000115, #0E3B65);  }
 .textstyle7 { font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
 .textstyle8 { font-size:18pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-weight:bold; line-height: 1.2;  }
 .textstyle9 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; font-weight:bold; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
-#container_6d1c74c3 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
-#container_fb36e63 { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
+#container_5353c50c { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; background:none;  }
+#container_5353c50c_padding { margin: 5px; display: block;  }
+#container_1fd9dd1a { vertical-align: top; position:relative; display: inline-block; width:100%; background:none;  }
 .textstyle10 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; line-height: 1.2;  }
-.textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; font-weight:bold; line-height: 1.2;  }
+.textstyle11 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; font-style:italic; line-height: 1.2;  }
 .ulstyle1 { margin:0; font-size: 12pt; color:#FFFFFF;  }
 .textstyle12 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
 .textstyle13 { font-size:28pt; font-family:Arial, Helvetica, sans-serif; color:#1F1F1F; line-height: 1.2; text-shadow: 2px 2px 2px #C0C0C0;  }
 .textstyle14 { font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000;  }
 @media only screen and (max-width: 800px)
 {
-		#container_fb36e63 { width:100%;  }
+		#container_1fd9dd1a { width:100%;  }
 }
