--- a/masterpage_html.css
+++ b/masterpage_html.css
@@ -51,6 +51,6 @@ body { background-color:#0E3B65; background: linear-gradient(to right, #000115, 
 .textstyle7 { font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 .textstyle8 { font-size:16pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  }
 #cell_50cb666a {  }
-#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; background:none; height:auto;  }
+#img_5cbd2978 { vertical-align: bottom; position:relative; display: inline-block; width:15%; min-width:5px; background:none; height:auto;  }
 #cell_b749fb5 {  }
-#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; background:none; height:auto;  }
+#img_53797471 { vertical-align: bottom; position:relative; display: inline-block; width:16%; min-width:10px; background:none; height:auto;  }
